--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -7,5 +7,13 @@ logging:
                 web:
                     server: DEBUG
                     socket: DEBUG
+        ru:
+            base:
+                game: DEBUG
 server:
     port: 8097
+spring:
+    datasource:
+        url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+        username: sa
+        password: sa
